<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:padding="@dimen/activity_padding">

    <TextView
        android:id="@+id/appIdLabel"
        android:layout_width="@dimen/main_row_label_width"
        android:layout_height="@dimen/main_row_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="left|center_horizontal"
        android:text="@string/appId"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/appIdText"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/main_row_height"
        android:layout_alignBaseline="@id/appIdLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/appIdLabel"
        android:ems="11"
        android:singleLine="true"
        android:text="12349983350832"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textIsSelectable="false" />
    
    <TextView
        android:id="@+id/tokenLabel"
        android:layout_width="@dimen/main_row_label_width"
        android:layout_height="@dimen/main_row_height"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/appIdLabel"
        android:layout_marginTop="10dp"
        android:text="@string/appToken"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/tokenText"
        android:layout_width="@dimen/main_row_text_width"
        android:layout_height="@dimen/main_row_height"
        android:layout_alignBaseline="@id/tokenLabel"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/tokenLabel"
        android:ems="5"
        android:singleLine="true"
        android:text="MDAxMDAxAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAI2PJJ2CkqxpP6U10%2BEUDCDBQq%2FpOLPRhaJMR2rocxtm5Q3K6gDj04s9mIZggOfcguwhefa0rTcoEnv%2BOb7nctZq%2BHJz8BRLMWz8Mxj6%2FUfeXl5raMIItFcNfiTqwOPNU%3D"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/sessionIdSettingsLabel"
        android:layout_width="@dimen/main_row_label_width"
        android:layout_height="@dimen/main_row_height"
        android:layout_below="@id/tokenLabel"
        android:layout_marginTop="10dp"
        android:text="@string/sessionId"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/sessionIdText"
        android:layout_width="@dimen/main_row_text_width"
        android:layout_height="@dimen/main_row_height"
        android:layout_alignBaseline="@id/sessionIdSettingsLabel"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/sessionIdSettingsLabel"
        android:ems="5"
        android:inputType="text"
        android:singleLine="true"
        android:text="1"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextView
        android:id="@+id/displayNameLabel"
        android:layout_width="@dimen/main_row_label_width"
        android:layout_height="@dimen/main_row_height"
        android:layout_alignLeft="@+id/sessionIdSettingsLabel"
        android:layout_below="@+id/sessionIdSettingsLabel"
        android:layout_marginTop="10dp"
        android:text="@string/displayName"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
     <EditText
         android:id="@+id/displayNameText"
         android:layout_width="@dimen/main_row_text_width"
         android:layout_height="@dimen/main_row_height"
         android:layout_alignBaseline="@id/displayNameLabel"
         android:layout_alignParentRight="true"
         android:layout_toRightOf="@id/displayNameLabel"
         android:ems="5"
         android:inputType="text"
         android:singleLine="true"
         android:text="sfkaos"
         android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <!-- <TextView
        android:id="@+id/UserIDLabel"
        android:layout_width="@dimen/main_row_label_width"
        android:layout_height="@dimen/main_row_height"
        android:layout_alignLeft="@+id/avsIpLabel"
        android:layout_below="@+id/appIdLabel"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="19dp"
        android:text="@string/usrID"
        android:textAppearance="?android:attr/textAppearanceSmall" /> -->

    <!-- <TextView
        android:id="@+id/UserIDText"
        android:layout_width="@dimen/main_row_label_width"
        android:layout_height="@dimen/main_row_height"
        android:layout_alignBaseline="@+id/UserIDLabel"
        android:layout_alignBottom="@+id/UserIDLabel"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="text"
        android:singleLine="true" />
 -->
    <!-- <TextView
        android:id="@+id/avsIpLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/UserIDText"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:text="@string/avsIp"
        android:textAppearance="?android:attr/textAppearanceSmall" /> -->

    
    <Button
        android:id="@+id/joinButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="87dp"
        android:text="@string/join" 
        android:textColor="@android:color/white"
        android:background="@drawable/join_btn_selector"/>

</RelativeLayout>